# bulk-rename

./: Cargo.toml  README.md
src/: main.rs
